--- a/EcoSeoul/package.json
+++ b/EcoSeoul/package.json
@@ -12,7 +12,7 @@
     "express": "~4.16.0",
     "helmet": "^3.13.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
+    "jade": "^1.11.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "promise-mysql": "^3.3.1"
