--- a/EcoSeoul/package.json
+++ b/EcoSeoul/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.323.0",
     "cookie-parser": "^1.4.3",
     "crypto-promise": "^2.1.0",
     "debug": "~2.6.9",
@@ -15,6 +16,8 @@
     "jade": "^1.11.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.0",
+    "multer-s3": "^2.7.0",
     "promise-mysql": "^3.3.1"
   }
 }
